--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,9 @@
-<h1> Artists Index: </h1>
-
+<h1>Artists</h1>
 <ul>
-<% @artists.each do |artist| %>
-<li><%= link_to artist.name, artist_path(artist) %></li>
-<% end %>
+  <% @artists.each do |artist| %>
+    <li>
+      <%= link_to artist.name, artist_path(artist) %>
+      (<%= artist.song_count %> <%= "song".pluralize(artist.song_count) %>)
+    </li>
+  <% end %>
 </ul>
